# learn_geant4

./: README.md  datasetG4.sh  geant4Install.sh
Tutorial/: CMakeLists.txt  sim.cc
Tutorial/include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyPhysicsList.hh  MyPrimaryGenerator.hh
Tutorial/macros/: vis.mac
Tutorial/src/: MyActionInitialization.cc  MyDetectorConstruction.cc  MyPhysicsList.cc  MyPrimaryGenerator.cc
Tuturial/: CMakeLists.txt
